@@ -1,5 +1,8 @@
 2020-08-05  Allen D. Ball  <ball@hcf.dev>
 
+	* src/main/java/ball/upnp/ant/taskdefs/SSDPTask.java:
+	Added support for "product" attribute (with default value).
+
 	* src/main/java/ball/upnp/ssdp/SSDPDiscoveryCache.java:
 	Changed Map entry value type to SSDPMessage.
 
